--- a/New Unity Project/Assembly-CSharp.csproj
+++ b/New Unity Project/Assembly-CSharp.csproj
@@ -53,10 +53,11 @@
     <UnityVersion>2021.3.9f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\PlayerController.cs" />
-    <Compile Include="Assets\TargetNot.cs" />
     <Compile Include="Assets\TargetShooter.cs" />
+    <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\Target.cs" />
+    <Compile Include="Assets\TargetNot.cs" />
+    <Compile Include="Assets\TargetBounds.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
